--- a/testsite4/index.html
+++ b/testsite4/index.html
@@ -28,7 +28,7 @@
 
 	<div class="infobox">
 	<b>Info:</b>
-	<a>Three decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.<br>  
+	<a>Almost four decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.<br>  
 	This site is a simple workjournal and test environment mostly for myself.</a>
 	</div>
 <!--
