--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 	<br>
 	<h1>nunofix - becoming a software engineer</h1 >
 
-	<div class="infobox">
+	<!--<div class="infobox">
 	<b>Contact:</b>
 	<a>me at nunofix dot com<br>
 	</a>
-	</div>
+	</div> -->
 
 	<div class="banner_left container">
 		<div class="top">
@@ -38,6 +38,8 @@
 	</div>
 
 		<div class="social-icons container">
+
+			<a href="mailto:me@nunofix.com" target="_blank"><span class="iconify" data-icon="simple-icons:gmail" style="font-size:24px;"></span></a><br>
 			<a href="https://twitter.com/mortumm" target="_blank"><span class="iconify" data-icon="simple-icons:twitter" style="font-size:24px;"></span></a><br>
 			<a href="https://mortumm.imgur.com" target="_blank"><span class="iconify" data-icon="simple-icons:imgur" style="font-size:24px;"></span></a>
 		</div>
