updates to subpage layout and base for chat

--- a/testsite4/index.html
+++ b/testsite4/index.html
@@ -23,9 +23,28 @@
 </head>
 
 <body>
+	<div class="banner_left container">
+		<div class="top">
+		<a href="https://mortumm.github.io/blog/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-1" style="font-size:24px;"></span></a>
+		<a href="https://mortumm.github.io/testsite1/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-2" style="font-size:24px;"></span></a>
+		<a href="https://mortumm.github.io/testsite2/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-3" style="font-size:24px;"></span></a>
+		<a href="https://mortumm.github.io/testsite3/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-4" style="font-size:24px;"></span></a>
+		<a href="https://mortumm.github.io/testsite4/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-5" style="font-size:24px;"></span></a>
+		<a href="https://mortumm.github.io/testsite5/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-6" style="font-size:24px;"></span></a>
+	</div>
+
+		<div class="social-icons container">
+
+			<a href="mailto:me@nunofix.com" target="_blank"><span class="iconify" data-icon="simple-icons:gmail" style="font-size:24px;"></span></a><br>
+			<a href="https://twitter.com/mortumm" target="_blank"><span class="iconify" data-icon="simple-icons:twitter" style="font-size:24px;"></span></a><br>
+			<a href="https://mortumm.imgur.com" target="_blank"><span class="iconify" data-icon="simple-icons:imgur" style="font-size:24px;"></span></a>
+		</div>
+	</div>
+	
 	<h2>sup.</h2>
-	<p>ASDF</p>
-			
+		<div>
+			<p>ASDF</p>
+		</div>	
 
 	<footer>
 		<p>&copy; online since 1994</p>
