--- a/index.html
+++ b/index.html
@@ -20,18 +20,12 @@
 	<br>
 	<h1>nunofix - becoming a software engineer</h1 >
 
-	<!--<div class="infobox">
-	<b>Contact:</b>
-	<a>me at nunofix dot com<br>
-	</a>
-	</div> -->
-
 	<div class="banner_left container">
 		<div class="top">
 		<a href="https://mortumm.github.io/blog/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-1" style="font-size:24px;"></span></a>
 		<a href="https://mortumm.github.io/testsite1/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-2" style="font-size:24px;"></span></a>
 		<a href="https://mortumm.github.io/testsite2/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-3" style="font-size:24px;"></span></a>
-		<a href="https://mortumm.github.io/testsite3/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-4" style="font-size:24px;"></span></a>
+		<a href="https://mortumm.github.io/school/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-4" style="font-size:24px;"></span></a>
 		<a href="https://mortumm.github.io/testsite4/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-5" style="font-size:24px;"></span></a>
 		<a href="https://mortumm.github.io/testsite5/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-6" style="font-size:24px;"></span></a>
 	</div>
