Content update and styling

--- a/index.html
+++ b/index.html
@@ -39,16 +39,17 @@
 		</div>
 	</div>
 
+	<h2>04-05-2023</h2>
+	<p>Test, test1, test2. How about a simple darkmode tool that I picked up from Brad Taunt. No need for it here though.</p>
+	<code>&lt;meta name="color-scheme" content="dark light"&gt;</code>
+	<p>To used in <em>head</em> on your page.</p>
+
 	<h2>23-03-2023</h2>
 	<p>New home at GitHub Pages. Work days, even weels roll past so fast. School too is keeping me busy, got some catching up to do for the summer. Fun times to be had.And since we're here, I have to start building this page up to bar, see you soon!</p>
 
 	<h2>12-10-2022</h2>
 	<p>Brand spanking new landing page.<br>Using the layout that was used in my early work. A classic look.<br> Updates will be slow, but I'll get there.</p>
 
-	<h2>Lorem</h2>
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam convallis, scelerisque ante eu, tempor ex. Phasellus porttitor tellus sit amet commodo pretium. Nam congue rutrum elit, vel tempus neque porttitor non. Aliquam erat volutpat. Duis lobortis et ante in dignissim. Integer magna libero, fermentum at erat sit amet, laoreet ultricies nunc. Integer pretium, lorem ut porttitor ullamcorper, purus lorem posuere risus, eget dictum ligula eros at erat. Sed rhoncus varius tristique. Nulla lacinia sollicitudin sapien ac pretium. Proin non iaculis tellus, vel maximus justo. Mauris mi enim, rhoncus id est at, rhoncus ullamcorper massa. In eget nisl finibus, congue erat posuere, suscipit diam. Vivamus eu lectus vulputate, egestas justo in, imperdiet neque.
-	</p>
 	<h2>Lorem</h2>
 	<p>
 		Curabitur dignissim placerat massa, a cursus lacus gravida sed. Nam vitae scelerisque magna. Ut non ipsum leo. Sed sit amet pretium quam. Cras in nulla posuere urna commodo tristique in sed lectus. Proin scelerisque pharetra lorem, non porttitor arcu tempus feugiat. Maecenas hendrerit augue vitae felis vehicula, sit amet cursus orci congue. Fusce fermentum, arcu nec suscipit faucibus, justo tellus viverra elit, et feugiat diam lorem in velit. Ut pellentesque erat et tortor varius auctor. In quis nunc neque. Praesent id urna scelerisque, viverra sem sed, pellentesque magna.
@@ -60,6 +61,7 @@
 	
 	<footer>
 		<p>&copy; online since 1994</p>
+		<p>Made with <span class="iconify" data-icon="mdi:heart"></span> in Finland</p>
 	</footer>
 
 </body>
