--- a/testsite4/index.html
+++ b/testsite4/index.html
@@ -5,6 +5,16 @@
 <meta name="Mortumm" content="Memo">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YXG94LNV1L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YXG94LNV1L');
+</script>
+
 	<title>Mortumm's Lair</title>
 
 <!--[if lt IE 9]>
