--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
+	
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YXG94LNV1L"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-YXG94LNV1L');
+	</script>
+
 <meta charset="UTF-8"/>
 <meta name="Nunofix" content="Landing page">
 <meta name="viewport" content="width=device-width, initial-scale=1">
