--- a/school/index.html
+++ b/school/index.html
@@ -3,6 +3,15 @@
 <head>
 <meta charset="UTF-8"/>
   <title>school</title>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YXG94LNV1L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YXG94LNV1L');
+</script>
 </head>
   
   <body>
