--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 <meta name="Nunofix" content="Landing page">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YXG94LNV1L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YXG94LNV1L');
+</script>
+
 	<title>nunofix</title>
 
 	<script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
