--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<h2>04-05-2023</h2>
 	<p>Test, test1, test2. How about a simple darkmode tool that I picked up from Brad Taunt. No need for it here though.</p>
 	<code>&lt;meta name="color-scheme" content="dark light"&gt;</code>
-	<p>To used in <em>head</em> on your page.</p>
+	<p>To be used in <em>head</em> on your page.</p>
 
 	<h2>23-03-2023</h2>
 	<p>New home at GitHub Pages. Work days, even weeks roll past so fast. School too is keeping me busy, got some catching up to do for the summer. Fun times to be had.And since we're here, I have to start building this page up to bar, see you soon!</p>
