--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8"/>
 <meta name="Nunofix" content="Landing page">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" type="iconify" href="/favicon.ico">
 
 	<title>nunofix</title>
 
@@ -29,7 +30,7 @@
 
 <body>
 	<br>
-	<h1>nunofix - becoming a software engineer</h1 >
+	<h1>nunofix - becoming a engineer</h1 >
 
 	<div class="banner_left container">
 		<div class="top">
