--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
 			<a href="https://mortumm.imgur.com" target="_blank"><span class="iconify" data-icon="simple-icons:imgur" style="font-size:24px;"></span></a>
 		</div>
 	</div>
+	<p>08-05-2023</p>
+	<p>Any feedback and ideas are more than welcome. Notes and some snippets are going to be put up here, other than that, go ahead please.</p>
 
 	<h2>04-05-2023</h2>
-	<p>Test, test1, test2. How about a simple darkmode tool that I picked up from Brad Taunt. No need for it here though.</p>
+	<p>How about a simple darkmode tool that I picked up from Brad Taunt. No need for it here though, right?</p>
 	<code>&lt;meta name="color-scheme" content="dark light"&gt;</code>
 	<p>To be used in <em>&lt;head&gt;</em> on your page.</p>
 
