--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8"/>
 <meta name="Nunofix" content="Landing page">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="iconify" href="/favicon.ico">
+<link rel="icon" type="image/ico" href="/images/favicon.ico">
 
 	<title>nunofix</title>
 
