Updates and cookies

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/purecookie.css"/>
+	<script src="purecookie.js"></script>
+	<!-- Thanks SnowPatch for this -->
 
 </head>
 
@@ -77,6 +80,8 @@
 		<p>&copy; online since 1994</p>
 		<p>Made with <span class="iconify" data-icon="mdi:heart"></span> in Finland</p>
 	</footer>
+
+	
 
 </body>
 </html>
