--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 
 		<div class="social-icons container">
 			<a href="mailto:me@nunofix.com" target="_blank"><span class="iconify" data-icon="simple-icons:gmail" style="font-size:24px;"></span></a><br>
-			<a href="https://twitter.com/mortumm" target="_blank"><span class="iconify" data-icon="simple-icons:twitter" style="font-size:24px;"></span></a><br>
+			<a href="https://github.com/Mortumm" target="_blank"><span class="iconify" data-icon="simple-line-icons:social-github" style="font-size:24px;"></span></a><br>
 			<a href="https://www.linkedin.com/in/nuno-mendes-engineer" target="_blank"><span class="iconify" data-icon="simple-icons:linkedin" style="font-size:24px;"></span><a><br>
-			<a href="https://mortumm.imgur.com" target="_blank"><span class="iconify" data-icon="simple-icons:imgur" style="font-size:24px;"></span></a>
+			<a href="https://twitter.com/mortumm" target="_blank"><span class="iconify" data-icon="simple-icons:twitter" style="font-size:24px;"></span></a><br>
+			<a href="https://mortumm.imgur.com" target="_blank"><span class="iconify" data-icon="simple-icons:imgur" style="font-size:24px;"></span></a><br>
 		</div>
 	</div>
 	
@@ -59,7 +60,7 @@
 	<p>To be used in <em>&lt;head&gt;</em> on your page.</p>
 
 	<h2>23-03-2023</h2>
-	<p>New home at GitHub Pages. Work days, even weeks roll past so fast. School too is keeping me busy, got some catching up to do for the summer. Fun times to be had.And since we're here, I have to start building this page up to bar, see you soon!</p>
+	<p>New home at GitHub Pages. Work days, even weeks roll past so fast. School too is keeping me busy, got some catching up to do for the summer. Fun times to be had. And since we're here, I have to start building this page up to bar, see you soon!</p>
 
 	<h2>12-10-2022</h2>
 	<p>Brand spanking new landing page.<br>Using the layout that was used in my early work. A classic look.<br> Updates will be slow, but I'll get there.</p>
