Setting up my skillset catalog

--- a/cookiepolicy.html
+++ b/cookiepolicy.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <h1>Aren't those edible?</h1>
-    <p>Here the cookies are only used for statistics. The information is used for a full calendar year, after that they're disposed.</p>
+    <p>Here the cookies are only used for statistics using Google Analytics. The information is used for a full calendar year, after that they're disposed.</p>
     <p>Enjoy it here.</p>
     <br>
     <a href="https://nunofix.com/"><p>Click here to go back.</p></a>
