--- a/testsite4/index.html
+++ b/testsite4/index.html
@@ -16,48 +16,72 @@
 </script>
 
 	<title>Mortumm's Lair</title>
-
-<!--[if lt IE 9]>
-  	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
-  </script>
-<![endif]-->
-
 	<script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
 </head>
 
 <body>
 	<div class="banner_left container">
 		<div class="top">
-		<a href="https://mortumm.github.io/blog/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-1" style="font-size:24px;"></span></a>
-		<a href="https://mortumm.github.io/testsite1/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-2" style="font-size:24px;"></span></a>
-		<a href="https://mortumm.github.io/testsite2/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-3" style="font-size:24px;"></span></a>
-		<a href="https://mortumm.github.io/testsite3/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-4" style="font-size:24px;"></span></a>
-		<a href="https://mortumm.github.io/testsite4/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-5" style="font-size:24px;"></span></a>
-		<a href="https://mortumm.github.io/testsite5/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-6" style="font-size:24px;"></span></a>
-	</div>
-
+			<a href="https://nunofix.com"><span class="iconify" data-icon="mdi:hexagon-slice-6" style="font-size:24px;"></span></a>
+		</div>
 		<div class="social-icons container">
-
 			<a href="mailto:me@nunofix.com" target="_blank"><span class="iconify" data-icon="simple-icons:gmail" style="font-size:24px;"></span></a><br>
+			<a href="https://github.com/Mortumm" target="_blank"><span class="iconify" data-icon="simple-line-icons:social-github" style="font-size:24px;"></span></a><br>
+			<a href="https://www.linkedin.com/in/nuno-mendes-engineer" target="_blank"><span class="iconify" data-icon="simple-icons:linkedin" style="font-size:24px;"></span><a><br>
 			<a href="https://twitter.com/mortumm" target="_blank"><span class="iconify" data-icon="simple-icons:twitter" style="font-size:24px;"></span></a><br>
-			<a href="https://mortumm.imgur.com" target="_blank"><span class="iconify" data-icon="simple-icons:imgur" style="font-size:24px;"></span></a>
+			<a href="https://mortumm.imgur.com" target="_blank"><span class="iconify" data-icon="simple-icons:imgur" style="font-size:24px;"></span></a><br>
 		</div>
 	</div>
 	
-	<h2>sup.</h2>
-		<div>
-			<p>ASDF</p>
+	<h2>nunofix - becoming a engineer</h2>
+		<div class="table" style="text-align: justify;">
+			<table>
+				<tr>
+				  <th>Language / Framework</th>
+				  <th>Skill level</th>
+				  <th>Examples</th>
+				</tr>
+				<tr>
+				  <td>Python</td>
+				  <td>Learning</td>
+				  <td>Nothing yet</td>
+				</tr>
+				<tr>
+				  <td>C# / .NET</td>
+				  <td>Basic</td>
+				  <td>Link here</td>
+				</tr>
+				<tr>
+					<td>HTML</td>
+					<td>Proficient</td>
+					<td>nunofix.com</td>
+				</tr>
+				<tr>
+					<td>CSS</td>
+					<td>Basic</td>
+					<td>mortumm.dev</td>
+				</tr>
+				<tr>
+					<td>Bootsrap</td>
+					<td>Basic</td>
+					<td>nunofix.com</td>
+				</tr>
+				<tr>
+					<td>JS / Node</td>
+					<td>Basic</td>
+					<td>mortumm.dev</td>
+				</tr>
+			  </table>
 		</div>	
 
 	<footer>
 		<p>&copy; online since 1994</p>
+		<p>Made with <span class="iconify" data-icon="mdi:heart"></span> in Finland</p>
 	</footer>
 
 </body>
