--- a/testsite4/index.html
+++ b/testsite4/index.html
@@ -54,7 +54,7 @@
 				<tr>
 				  <td>C# / .NET</td>
 				  <td>Basic</td>
-				  <td>Link here</td>
+				  <td>Github</td>
 				</tr>
 				<tr>
 					<td>HTML</td>
@@ -67,14 +67,36 @@
 					<td>mortumm.dev</td>
 				</tr>
 				<tr>
-					<td>Bootsrap</td>
+					<td>Bootstrap</td>
 					<td>Basic</td>
-					<td>nunofix.com</td>
+					<td>anders.finna.fi</td>
 				</tr>
 				<tr>
-					<td>JS / Node</td>
+					<td>Javascript</td>
 					<td>Basic</td>
 					<td>mortumm.dev</td>
+				</tr>
+			  </table>
+
+			  <h2>General tools that I've used.</h2>
+			  <table>
+				<tr>
+					<td>Git</td>
+					<td>Figma</td>
+					<td>Google Firebase</td>
+					<td>Linux server</td>
+				</tr>
+				<tr>
+					<td>Cisco Networking</td>
+					<td>Arduino</td>
+					<td>OpenSCAD</td>
+					<td>Nginx</td>
+				</tr>
+				<tr>
+					<td>SQL</td>
+					<td>Laravel</td>
+					<td>Virtualization</td>
+					<td>More?</td>
 				</tr>
 			  </table>
 		</div>	
