clean up and update

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 	<h2>04-05-2023</h2>
 	<p>How about a simple darkmode tool that I picked up from Brad Taunt. No need for it here though, right?</p>
-	<code>&lt;meta name="color-scheme" content="dark light"&gt;</code>
+	<p style="strong">&lt;meta name="color-scheme" content="dark light"&gt;</p>
 	<p>To be used in <em>&lt;head&gt;</em> on your page.</p>
 
 	<h2>23-03-2023</h2>
