--- a/testsite4/index.html
+++ b/testsite4/index.html
@@ -54,7 +54,7 @@
 				<tr>
 				  <td>C# / .NET</td>
 				  <td>Basic</td>
-				  <td>Github</td>
+				  <td>GitHub</td>
 				</tr>
 				<tr>
 					<td>HTML</td>
