Update to social and skills

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</script>
 <body>
 	<br>
-	<h1>nunofix - becoming a engineer</h1>
+	<h1>nunofix - becoming an engineer</h1>
 	<div class="banner_left container">
 		<div class="top">
 			<a href="https://mortumm.github.io/blog/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-1" style="font-size:24px;"></span></a>
@@ -42,8 +42,7 @@
 			<a href="mailto:me@nunofix.com" target="_blank"><span class="iconify" data-icon="simple-icons:gmail" style="font-size:24px;"></span></a><br>
 			<a href="https://github.com/Mortumm" target="_blank"><span class="iconify" data-icon="simple-line-icons:social-github" style="font-size:24px;"></span></a><br>
 			<a href="https://www.linkedin.com/in/nuno-mendes-engineer" target="_blank"><span class="iconify" data-icon="simple-icons:linkedin" style="font-size:24px;"></span><a><br>
-			<a href="https://twitter.com/mortumm" target="_blank"><span class="iconify" data-icon="simple-icons:twitter" style="font-size:24px;"></span></a><br>
-			<a href="https://mortumm.imgur.com" target="_blank"><span class="iconify" data-icon="simple-icons:imgur" style="font-size:24px;"></span></a><br>
+			<a href="https://twitter.com/mortumm" target="_blank"><span class="iconify" data-icon="simple-icons:x" style="font-size:24px;"></span></a><br>
 		</div>
 	</div>
 		
