--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/ico" href="/images/favicon.ico">
 
-	<title>nunofix</title>
+	<title>mortumm.dev</title>
 	<script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
 	</script>
 <body>
 	<br>
-	<h1>nunofix - becoming an engineer</h1>
+	<h1>mortumm.dev - becoming an engineer</h1>
 	<div class="banner_left container">
 		<div class="top">
 			<a href="https://mortumm.github.io/blog/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-1" style="font-size:24px;"></span></a>
@@ -58,11 +58,11 @@
 	<p>New home at GitHub Pages. Work days, even weeks roll past so fast. School too is keeping me busy, got some catching up to do for the summer. Fun times to be had. And since we're here, I have to start building this page up to bar, see you soon!</p>
 
 	<h2>12-10-2022</h2>
-	<p>Brand spanking new landing page.<br>Using the layout that was used in my early work. A classic look.<br> Updates will be slow, but I'll get there.</p>
+	<p>Brand spanking new landing page.<br>Using the layout that was used in my early work in the 90's... A classic look.<br> Updates will be slow, but I'll get there.</p>
 	
 	<footer>
 		<p>&copy; online since 1994</p>
-		<p>Made with <span class="iconify" data-icon="mdi:heart"></span> in Finland</p>
+		<p>Made with <span class="iconify" data-icon="mdi:heart"></span> & <span class="iconify" data-icon="mdi:coffee"></span> in Finland</p>
 	</footer>
 
 </body>
