--- a/cookiepolicy.html
+++ b/cookiepolicy.html
@@ -19,6 +19,7 @@
 <body>
     <h1>Aren't those edible?</h1>
     <p>Here the cookies are only used for statistics using Google Analytics. The information is used for a full calendar year, after that they are being disposed.</p>
+    <p>Full read for Google Analytics Privacy & Terms can be found here: <a href="https://policies.google.com/">Google Policies</a></p>
     <p>Enjoy it here.</p>
     <br>
     <a href="https://mortumm.dev/"><p>Click here to go back.</p></a>
