--- a/cookiepolicy.html
+++ b/cookiepolicy.html
@@ -21,6 +21,6 @@
     <p>Here the cookies are only used for statistics using Google Analytics. The information is used for a full calendar year, after that they're disposed.</p>
     <p>Enjoy it here.</p>
     <br>
-    <a href="https://nunofix.com/"><p>Click here to go back.</p></a>
+    <a href="https://mortumm.dev/"><p>Click here to go back.</p></a>
 </body>
 </html>
