--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"/>
-<meta name="Nunofix" content="Landing page">
+<meta name="mortumm.dev" content="Landing page">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/ico" href="/images/favicon.ico">
 
-	<title>nunofix</title>
+	<title>mortumm.dev</title>
 	<script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
 	</script>
 <body>
 	<br>
-	<h1>nunofix - becoming an engineer</h1>
+	<h1>mortumm.dev - becoming an engineer</h1>
 	<div class="banner_left container">
 		<div class="top">
 			<a href="https://mortumm.github.io/blog/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-1" style="font-size:24px;"></span></a>
@@ -62,7 +62,7 @@
 	
 	<footer>
 		<p>&copy; online since 1994</p>
-		<p>Made with <span class="iconify" data-icon="mdi:heart"></span> in Finland</p>
+		<p>Made with <span class="iconify" data-icon="mdi:heart"></span> % <span class="iconify" data-icon="mdi:coffee"></span> in Finland</p>
 	</footer>
 
 </body>
