--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	
 	<footer>
 		<p>&copy; online since 1994</p>
-		<p>Made with <span class="iconify" data-icon="mdi:heart"></span> % <span class="iconify" data-icon="mdi:coffee"></span> in Finland</p>
+		<p>Made with <span class="iconify" data-icon="mdi:heart"></span> & <span class="iconify" data-icon="mdi:coffee"></span> in Finland</p>
 	</footer>
 
 </body>
