--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 	<div class="banner_left container">
 		<div class="top">
 			<a href="https://mortumm.github.io/blog/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-1" style="font-size:24px;"></span></a>
-			<a href="https://mortumm.github.io/school/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-2" style="font-size:24px;"></span></a>
 			<a href="https://mortumm.github.io/testsite1/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-3" style="font-size:24px;"></span></a>
 			<a href="https://mortumm.github.io/testsite2/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-4" style="font-size:24px;"></span></a>
+			<a href="https://mortumm.github.io/testsite3/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-2" style="font-size:24px;"></span></a>
 			<a href="https://mortumm.github.io/testsite4/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-5" style="font-size:24px;"></span></a>
 			<a href="https://mortumm.github.io/testsite5/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-6" style="font-size:24px;"></span></a>
 		</div>
@@ -45,6 +45,9 @@
 			<a href="https://twitter.com/mortumm" target="_blank"><span class="iconify" data-icon="simple-icons:x" style="font-size:24px;"></span></a><br>
 		</div>
 	</div>
+
+	<h2>28-12-2023</h2>
+	<p>WebDev course starting soon, I'm excited! Should look in to Jekyll and GitHub Actions for a static site generator with all the bells and whistles.</p>
 		
 	<h2>08-05-2023</h2>
 	<p>Any feedback and ideas are more than welcome. Notes and some snippets are going to be put up here, other than that, go ahead please.</p>
