Tuned some details

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<a href="mailto:me@nunofix.com" target="_blank"><span class="iconify" data-icon="simple-icons:gmail" style="font-size:24px;"></span></a><br>
 			<a href="https://github.com/Mortumm" target="_blank"><span class="iconify" data-icon="simple-line-icons:social-github" style="font-size:24px;"></span></a><br>
 			<a href="https://www.linkedin.com/in/nuno-mendes-engineer" target="_blank"><span class="iconify" data-icon="simple-icons:linkedin" style="font-size:24px;"></span><a><br>
-			<a href="https://twitter.com/mortumm" target="_blank"><span class="iconify" data-icon="simple-icons:x" style="font-size:24px;"></span></a><br>
+			<a href="https://x.com/mortumm" target="_blank"><span class="iconify" data-icon="simple-icons:x" style="font-size:24px;"></span></a><br>
 		</div>
 	</div>
 
