--- a/testsite5/index.html
+++ b/testsite5/index.html
@@ -2,36 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jekyll testsite</title>
 </head>
-
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YXG94LNV1L"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-YXG94LNV1L');
-  </script>
-  
 <body>
-    <div id="images">
-        <iframe src="https://octodex.github.com/images/NUX_Octodex.gif"></iframe>
-        <iframe src="https://octodex.github.com/images/yogitocat.png"></iframe>
-        <iframe src="https://octodex.github.com/images/mona-the-rivetertocat.png"></iframe>
-        <iframe src="https://octodex.github.com/images/mona-the-rivetertocat.png"></iframe>
-        <iframe src="https://octodex.github.com/images/manufacturetocat.png"></iframe>
-        <iframe src="https://octodex.github.com/images/OctoAsians_dex_Full.png"></iframe>
-        <iframe src="https://octodex.github.com/images/Octoqueer.png"></iframe>
-        <iframe src="https://octodex.github.com/images/Brennatocat.png"></iframe>
-        <iframe src="https://octodex.github.com/images/Fintechtocat.png"></iframe>
-        <iframe src="https://octodex.github.com/images/Sentrytocat_octodex.jpg"></iframe>
-        <iframe src="https://octodex.github.com/images/skatetocat.png"></iframe>
-        <iframe src="https://octodex.github.com/images/filmtocat.png"></iframe>
-        <iframe src="https://octodex.github.com/images/daftpunktocat-thomas.gif"></iframe>
-    </div>
+    
 </body>
 </html>
