--- a/_posts/2024-06-01-ImportOld.html
+++ b/_posts/2024-06-01-ImportOld.html
@@ -6,6 +6,45 @@ category:
     - "Mortumm"
 ---
 
+These posts were brought from earlier publishing environment as they were. So
+not very well organized. Posts before 2015 were unfortunately lost. By my own
+mistake during migration. Argh.
+
+<h2>28-12-2023</h2>
+<p>
+    WebDev course starting soon, I'm excited! Should look in to Jekyll and
+    GitHub Actions for a static site generator with all the bells and whistles.
+</p>
+
+<h2>08-05-2023</h2>
+<p>
+    Any feedback and ideas are more than welcome. Notes and some snippets are
+    going to be put up here, other than that, go ahead please.
+</p>
+
+<h2>04-05-2023</h2>
+<p>
+    How about a simple darkmode tool that I picked up from Brad Taunt. No need
+    for it here though, right?
+</p>
+<p><strong>&lt;meta name="color-scheme" content="dark light"&gt;</strong></p>
+<p>To be used in <em>&lt;head&gt;</em> on your page.</p>
+
+<h2>23-03-2023</h2>
+<p>
+    New home at GitHub Pages. Work days, even weeks roll past so fast. School
+    too is keeping me busy, got some catching up to do for the summer. Fun times
+    to be had. And since we're here, I have to start building this page up to
+    bar, see you soon!
+</p>
+
+<h2>12-10-2022</h2>
+<p>
+    Brand spanking new landing page.<br />Using the layout that was used in my
+    early work in the 90's... A classic look.<br />
+    Updates will be slow, but I'll get there.
+</p>
+
 <p>23-12-2022</p>
 <p>Happy holidays loves, just a short breather.</p>
 
